# sample_cpp_project

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  benchmark_add.cpp  main.cpp  my_add.cpp  test_add.cpp
.github/workflows/: test.yaml
docs/html/: index.html
docs/latex/: refman.tex
